WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
52518
REGRESSION (
r69237
): Black border around map elements while using an image map on Mac platform
https://bugs.webkit.org/show_bug.cgi?id=52518
Summary
REGRESSION (r69237): Black border around map elements while using an image ma...
Darth
Reported
2011-01-15 12:56:15 PST
Created
attachment 79073
[details]
issue image This issue seems to happen on webkit nightly and chrome on a mac (does not happen on windows for either, haven't tried chrome linux). This issue doesn't happen on Safari 5.0.3 or Firefox on the mac. Downstream bug
http://code.google.com/p/chromium/issues/detail?id=68487
The test url above shows the issue, click on the circles and a black border is seen. See the attached image.
Attachments
issue image
(22.55 KB, image/png)
2011-01-15 12:56 PST
,
Darth
no flags
Details
testcase
(479 bytes, text/html)
2011-02-11 10:03 PST
,
Darth
no flags
Details
Patch
(68.14 KB, patch)
2011-04-02 16:52 PDT
,
Andy Estes
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darth
Comment 1
2011-01-15 12:58:57 PST
Also, in that test url, if you remove the css border and outline properties, clicking circles shows the normal focus border, which is correct, and no black border is seen.
Alexey Proskuryakov
Comment 2
2011-01-19 17:13:01 PST
<
rdar://problem/8889770
>
Andy Estes
Comment 3
2011-01-19 17:38:50 PST
Looks like this regression is due to
http://trac.webkit.org/changeset/69237
.
Andy Estes
Comment 4
2011-01-26 17:52:14 PST
I can also reproduce this issue by tabbing through the areas, although behavior exists in shipping Safari 5.
chris fleizach
Comment 5
2011-01-26 17:55:53 PST
yea it's pretty reproducible
Andy Estes
Comment 6
2011-02-03 16:51:22 PST
Another site affected by this bug is
http://www.conduit.com
. Click the tabs labeled 'Create apps yourself', 'Promote & optimize', etc. to see the bug.
Darth
Comment 7
2011-02-11 10:03:09 PST
Created
attachment 82141
[details]
testcase Adding a copy of the test case from the url since the old one was modified by it's original author to do a blur() onclick. So the issue wasn't being seen in the url.
Andy Estes
Comment 8
2011-04-02 16:52:36 PDT
Created
attachment 87989
[details]
Patch
Andy Estes
Comment 9
2011-04-02 17:01:46 PDT
Committed
r82781
: <
http://trac.webkit.org/changeset/82781
>
Brian Weinstein
Comment 10
2011-04-02 17:02:07 PDT
Comment on
attachment 87989
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=87989&action=review
> Source/WebCore/rendering/RenderImage.cpp:353 > +
Might want to get rid of the whitespace added here.
Andy Estes
Comment 11
2011-04-02 17:03:29 PDT
(In reply to
comment #10
)
> (From update of
attachment 87989
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=87989&action=review
> > > Source/WebCore/rendering/RenderImage.cpp:353 > > + > > Might want to get rid of the whitespace added here.
I did before I landed.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug