2011-04-02  Andy Estes  <aestes@apple.com>

Reviewed by Oliver Hunt.

        REGRESSION (r69237): Black border around map elements while using an image map on Mac platform
        https://bugs.webkit.org/show_bug.cgi?id=52518

        Test: fast/images/imagemap-focus-ring-zero-outline-width.html

        * rendering/RenderImage.cpp:
        (WebCore::RenderImage::paintAreaElementFocusRing): Return early if outlineWidth is 0.
2011-04-02  Andy Estes  <aestes@apple.com>

        Reviewed by Oliver Hunt.

        REGRESSION (r69237): Black border around map elements while using an image map on Mac platform
        https://bugs.webkit.org/show_bug.cgi?id=52518

        * fast/images/imagemap-focus-ring-zero-outline-width.html: Added.
        * platform/mac/fast/images/imagemap-focus-ring-zero-outline-width-expected.checksum: Added.
        * platform/mac/fast/images/imagemap-focus-ring-zero-outline-width-expected.png: Added.
        * platform/mac/fast/images/imagemap-focus-ring-zero-outline-width-expected.txt: Added.


Canonical link: https://commits.webkit.org/72568@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82781 268f45cc-cd09-0410-ab3c-d52691b4dbfc